--- a/splinter.tex
+++ b/splinter.tex
@@ -930,7 +930,7 @@ Overall, our experiments show the following:
 	\item{Splinter can support realistic applications including the search features of Yelp and flight search sites, and data structures
 		required for map routing.}
 	\item{Splinter achieves end-to-end latencies below 1.6 seconds for queries in these applications on realistic data.}
-	\item{Splinter's protocols have fewer round trips, lower bandwidth, and lower server-side computation costs than 
+	\item{Splinter's protocols are almost always more efficient than those of 
 		the most recent practical private query system by Olumofin et al.~\cite{goldberg}.}
 \end{itemize}
 
