--- a/title.tex
+++ b/title.tex
@@ -9,7 +9,7 @@
 \degree{Doctor of Philosophy in Computer Science}
 \degreemonth{September}
 \degreeyear{2018}
-\thesisdate{\today}
+\thesisdate{July 26, 2018}
 \supervisor{Nickolai Zeldovich}{Professor of Electrical Engineering and Computer Science}
 \supervisor{James Mickens}{Associate Professor of Computer Science at Harvard University}
 \chairman{Leslie A. Kolodziejski}{Professor of Electrical Engineering and Computer Science \\ 
