--- a/veil.tex
+++ b/veil.tex
@@ -1316,7 +1316,7 @@ node compiler. This compiler is a JavaScript file
 that runs at the end of the page load, when the initial DOM
 tree has been assembled. The compiler locates special
 Angular directives like \texttt{\{\{\}\}}, and replaces
-them with new JavaScript code and new DOM nodes
+them with new JavaScript code and DOM nodes
 that implement the data binding protocol.
 
 Angular allows URLs to contain embedded \texttt{\{\{\}\}}
